--- a/templates/splunk-enterprise.template
+++ b/templates/splunk-enterprise.template
@@ -379,6 +379,40 @@
                 "QuickStartS3URL": "https://s3.amazonaws.com"
             }
         },
+        "Region2ELBAccountId": {
+          "us-east-1"      : { "AccountId": "127311923021" },
+          "us-west-1"      : { "AccountId": "027434742980" },
+          "us-west-2"      : { "AccountId": "797873946194" },
+          "eu-west-1"      : { "AccountId": "156460612806" },
+          "eu-west-2"      : { "AccountId": "652711504416" },
+          "ap-northeast-1" : { "AccountId": "582318560864" },
+          "ap-northeast-2" : { "AccountId": "600734575887" },
+          "ap-southeast-1" : { "AccountId": "114774131450" },
+          "ap-southeast-2" : { "AccountId": "783225319266" },
+          "ap-south-1"     : { "AccountId": "718504428378" },
+          "us-east-2"      : { "AccountId": "033677994240" },
+          "ca-central-1"   : { "AccountId": "985666609251" },
+          "sa-east-1"      : { "AccountId": "507241528517" },
+          "cn-north-1"     : { "AccountId": "638102146993" },
+          "eu-central-1"   : { "AccountId": "054676820928" }
+        },
+        "Region2ARNPrefix": {
+          "us-east-1"      : { "ARNPrefix": "arn:aws:" },
+          "us-west-1"      : { "ARNPrefix": "arn:aws:" },
+          "us-west-2"      : { "ARNPrefix": "arn:aws:" },
+          "eu-west-1"      : { "ARNPrefix": "arn:aws:" },
+          "eu-west-2"      : { "ARNPrefix": "arn:aws:" },
+          "ap-northeast-1" : { "ARNPrefix": "arn:aws:" },
+          "ap-northeast-2" : { "ARNPrefix": "arn:aws:" },
+          "ap-southeast-1" : { "ARNPrefix": "arn:aws:" },
+          "ap-southeast-2" : { "ARNPrefix": "arn:aws:" },
+          "ap-south-1"     : { "ARNPrefix": "arn:aws:" },
+          "us-east-2"      : { "ARNPrefix": "arn:aws:" },
+          "ca-central-1"   : { "ARNPrefix": "arn:aws:" },
+          "sa-east-1"      : { "ARNPrefix": "arn:aws:" },
+          "cn-north-1"     : { "ARNPrefix": "arn:aws-cn:" },
+          "eu-central-1"   : { "ARNPrefix": "arn:aws:" }
+        },
         "SplunkConfig": {
             "searchhead-disk-size": {
                 "gb": "100"
@@ -1783,67 +1817,97 @@
                 }
             }
         },
-        "SplunkSHCLoadBalancer": {
-            "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
-            "Condition": "CreateSHC",
-            "Properties": {
-                "ConnectionDrainingPolicy": {
-                    "Enabled": true,
-                    "Timeout": 300
-                },
-                "LBCookieStickinessPolicy": [
-                    {
-                        "CookieExpirationPeriod": "86400",
-                        "PolicyName": "SplunkWebCookiePolicy"
-                    }
-                ],
-                "Instances": [
-                    {
-                        "Ref": "SplunkSHCMember1"
-                    },
-                    {
-                        "Ref": "SplunkSHCMember2"
-                    },
-                    {
-                        "Ref": "SplunkSHCMember3"
-                    }
-                ],
-                "Listeners": [
-                    {
-                        "LoadBalancerPort": "8000",
-                        "InstancePort": "8000",
-                        "Protocol": "http",
-                        "PolicyNames": [
-                            "SplunkWebCookiePolicy"
-                        ]
-                    }
-                ],
-                "Scheme": "internet-facing",
-                "SecurityGroups": [
-                    {
-                        "Ref": "SplunkSecurityGroup"
-                    },
-                    {
-                        "Ref": "SplunkSearchHeadSecurityGroup"
-                    }
-                ],
-                "Subnets": [
-                    {
-                        "Ref": "PublicSubnet1ID"
-                    },
-                    {
-                        "Ref": "PublicSubnet2ID"
-                    }
-                ],
-                "HealthCheck": {
-                    "Target": "TCP:8089",
-                    "HealthyThreshold": "2",
-                    "UnhealthyThreshold": "3",
-                    "Interval": "30",
-                    "Timeout": "5"
-                }
-            }
+
+        "SplunkSHCApplicationLoadBalancer" : {
+          "Type" : "AWS::ElasticLoadBalancingV2::LoadBalancer",
+          "Condition": "CreateSHC",
+          "Properties" : {
+            "Scheme" : "internet-facing",
+            "Subnets" : [
+                { "Ref": "PublicSubnet1ID" },
+                { "Ref": "PublicSubnet2ID" }
+            ],
+            "SecurityGroups": [
+                { "Ref": "SplunkSecurityGroup" },
+                { "Ref": "SplunkSearchHeadSecurityGroup" }
+            ],
+            "LoadBalancerAttributes" :
+              [ { "Key" : "access_logs.s3.enabled", "Value" : "true" },
+                { "Key" : "access_logs.s3.bucket", "Value" : { "Ref" : "LogsBucket" }},
+                { "Key" : "access_logs.s3.prefix", "Value" : "Logs" }
+            ]
+          },
+          "DependsOn": "LogsBucketPolicy"
         },
+
+        "ALBListener" : {
+          "Type" : "AWS::ElasticLoadBalancingV2::Listener",
+          "Properties" : {
+            "DefaultActions" : [{
+              "Type" : "forward",
+              "TargetGroupArn" : { "Ref" : "ALBTargetGroup" }
+            }],
+            "LoadBalancerArn" : { "Ref" : "SplunkSHCApplicationLoadBalancer" },
+            "Port" : "8000",
+            "Protocol" : "HTTP"
+          }
+        },
+
+        "ALBTargetGroup" : {
+          "Type" : "AWS::ElasticLoadBalancingV2::TargetGroup",
+          "Properties" : {
+            "Port" : 8000,
+            "Protocol" : "HTTP",
+            "HealthCheckPort": 8089,
+            "HealthCheckProtocol": "HTTPS",
+            "HealthCheckIntervalSeconds" : 30,
+            "HealthCheckTimeoutSeconds" : 5,
+            "HealthyThresholdCount" : 2,
+            "UnhealthyThresholdCount" : 3,
+            "VpcId" : {"Ref" : "VPCID"},
+            "Targets" : [
+                { "Id" : { "Ref" : "SplunkSHCMember1"}, "Port" : 8000 },
+                { "Id" : { "Ref" : "SplunkSHCMember2"}, "Port" : 8000 },
+                { "Id" : { "Ref" : "SplunkSHCMember3"}, "Port" : 8000 }
+            ],
+            "TargetGroupAttributes" : [
+                { "Key" : "stickiness.enabled", "Value" : "true" },
+                { "Key" : "stickiness.type", "Value" : "lb_cookie" },
+                { "Key" : "stickiness.lb_cookie.duration_seconds", "Value" : "86400" },
+                { "Key" : "deregistration_delay.timeout_seconds", "Value" : "300" }
+            ]
+          }
+        },
+
+        "LogsBucket": {
+          "Type": "AWS::S3::Bucket",
+          "DeletionPolicy" : "Retain"
+        },
+
+        "LogsBucketPolicy": {
+          "Type": "AWS::S3::BucketPolicy",
+          "Properties": {
+            "Bucket": {
+              "Ref": "LogsBucket"
+            },
+            "PolicyDocument": {
+              "Version": "2008-10-17",
+              "Statement": [
+                {
+                  "Sid": "ALBAccessLogs",
+                  "Effect": "Allow",
+                  "Resource": {
+                    "Fn::Join": [ "", [ { "Fn::FindInMap" : ["Region2ARNPrefix", {"Ref" : "AWS::Region"}, "ARNPrefix"] },
+                                  "s3:::", { "Ref": "LogsBucket" }, "/", "Logs", "/AWSLogs/", { "Ref": "AWS::AccountId" }, "/*" ] ]
+                  },
+                  "Principal": { "AWS": { "Fn::FindInMap": [ "Region2ELBAccountId", { "Ref": "AWS::Region" }, "AccountId" ] } },
+                  "Action": [ "s3:PutObject" ]
+                }
+              ]
+            }
+          }
+        },
+
         "SplunkIndexerNodesASG": {
             "Type": "AWS::AutoScaling::AutoScalingGroup",
             "DependsOn": "SplunkCM",
@@ -1911,7 +1975,7 @@
                                 "CreateSHC",
                                 {
                                     "Fn::GetAtt": [
-                                        "SplunkSHCLoadBalancer",
+                                        "SplunkSHCApplicationLoadBalancer",
                                         "DNSName"
                                     ]
                                 },
